<resources>
    <string name="app_name">My</string>
    <string name="textview2">TextView</string>
    <string name="show_all_pots">Show All Posts</string>
    <string name="hello_world22">Hello World22!</string>
    <string name="hello_world_33">hello world 33</string>
    <string name="hello_world_4">hello world 4</string>
    <string name="show_one_post">Show specific post</string>
    <string name="please_enter_id_of_post">please enter id of post</string>
    <string name="show_comments_by_postId">show comments by postId</string>
    <string name="please_enter_postId">please enter postId</string>
    <string name="show_comments">show comments</string>
    <string name="please_enter_the_postId">Please enter the postId</string>
    <string name="please_enter_userid">please enter userId</string>
    <string name="please_enter_title_of_post">please enter title of post</string>
    <string name="please_enter_body_of_post">please enter body of post</string>
    <string name="adding_post_here">Add post </string>
    <string name="show_post">show post</string>
    <string name="welcome">Welcome</string>
    <string name="add_post">add post</string>
</resources>