<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Hello World!" />
    <TextView
        android:id="@+id/textInput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInput"
        android:layout_marginTop="80dp"
        android:text="@string/hello_world22"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/textInput3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInput2"
        android:layout_marginTop="80dp"
        android:text="@string/hello_world_33"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/textInput4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInput3"
        android:layout_marginTop="80dp"
        android:text="@string/hello_world_4"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


    <Button
        android:id="@+id/but_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInput4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:layout_marginTop="90dp"/>

</RelativeLayout>
</ScrollView>